Fix overflow issue in event table

--- a/ESSArch_PP/frontend/static/frontend/styles/modules/index.scss
+++ b/ESSArch_PP/frontend/static/frontend/styles/modules/index.scss
@@ -681,7 +681,6 @@ padding: 0 12px;
 }
 .table-container {
     position: relative;
-    overflow-x: auto;
     thead, tbody {
         border: 1px solid $border-color;
     }
